--- a/css/style.css
+++ b/css/style.css
@@ -862,6 +862,7 @@ footer .rcg {
   header {
     padding: 10px 20px !important;
     height: auto;
+    overflow: visible;
   }
 
   .mobile-menu-btn {
